# peerdrop-frontend

./: .env  .gitignore  firebase.json  package-lock.json  package.json  vite.config.ts
app/: app.css  root.tsx  routes.ts
app/api/: keyExchange.ts  users.ts
app/components/: Chat.tsx  ImageUpload.tsx
app/db/: database.ts  schema.ts
app/db/queries/: connectedUser.ts  userIdentity.ts
app/hooks/: useDatabase.ts  useUser.ts
app/routes/: chat.tsx  chats.tsx  home.tsx  qr.tsx  welcome.tsx
app/routes/chat/: $code.tsx  new.tsx
app/services/: userService.ts  websocket.ts
crypto-wasm/: Cargo.toml  README.md
crypto-wasm/src/: lib.rs
crypto-wasm/src/ecdh/: keygen.rs  mod.rs
crypto-wasm/src/eddsa/: keygen.rs  mod.rs  signgen.rs  verify.rs
wasm_hello/: Cargo.toml  README.md
wasm_hello/src/: lib.rs
